--- a/css/main.css
+++ b/css/main.css
@@ -23,11 +23,6 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-body {
-  background-image: url("../images/bg_ptn.gif");
-  background-repeat: repeat;
-}
-
 #navigation {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -115,6 +110,43 @@ body {
   outline-width: 0;
   padding: 2px;
   font-size: 1.2em;
+}
+
+.nav-servant-ico {
+  cursor: pointer;
+}
+.nav-servant-radio {
+  display: none;
+}
+
+#servants {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.servant-card {
+  width: 295px;
+  height: 503px;
+  background-color: red;
+  border: 1px solid black;
+  margin: 5px;
+}
+.servant-border {
+  background-image: url("../images/");
+}
+
+body {
+  background-image: url("../images/bg_ptn.gif");
+  background-repeat: repeat;
 }
 
 .button-fgo {
