--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -5,3 +5,9 @@ body {
   font-weight: bold;
   font-stretch: condensed;
 }
+@mixin fontStroke {
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
+    1px 1px 0 #000;
+}
+
+@import url("https://fonts.googleapis.com/css2?family=Rasa&display=swap");
