--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,1 +1,1 @@
-@import "variables", "reset", "typography", "mixin", "layout";
+@import "variables", "reset", "typography", "mixin", "layout", "modals";
