--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -6,6 +6,24 @@ body {
 }
 // Button
 .button {
+  &-X {
+    position: absolute;
+    width: 35px;
+    height: 35px;
+    top: -17.5px;
+    right: -17.5px;
+    background-image: radial-gradient(#cecece, #fff);
+    box-shadow: 0px 0px 5px black;
+    transform: rotate(45deg);
+    @include flexCenter;
+    cursor: pointer;
+    p {
+      color: $bgcolor_blue1;
+      font-size: 1.5em;
+      transform: rotate(-45deg);
+      user-select: none;
+    }
+  }
   &-fgo {
     height: 41px;
     width: 165px;
@@ -43,6 +61,7 @@ body {
 
 .hideMe {
   // display: none;
-  visibility: visible;
+  visibility: hidden;
+  // visibility: hidden;
   // opacity: 0;
 }
