--- a/sass/_modals.scss
+++ b/sass/_modals.scss
@@ -1,12 +1,8 @@
 #modals {
-  //   z-index: 100;
-  //   width: 1030px;
-  //   height: 571px;
+  position: relative;
   padding: 10px;
   background-image: url("../images/bg_ptn.gif");
   background-repeat: repeat;
-
-  // @include flexCenter;
   display: flex;
   align-items: flex-start;
 
@@ -30,13 +26,72 @@
   }
   &-info {
     text-align: left;
+    &-wrapper {
+      display: flex;
+      align-content: flex-start;
+    }
   }
 }
 
 .modals {
+  &-hide {
+    opacity: 0;
+    transition: opacity 0.5s;
+    transition-timing-function: ease;
+  }
+  &-show {
+    opacity: 1;
+  }
+  &-skill {
+    font-size: 1.5em;
+    font-style: italic;
+    // position: relative;
+    p {
+      margin-top: 10px;
+    }
+    // text-align: center;
+    // line-height: 1.5;
+    &-title {
+      // position: absolute;
+      // top: 50%;
+      // z-index: 0;
+      width: 100%;
+      height: 2px;
+      margin-bottom: 5px;
+      // background: red;
+      background-image: linear-gradient(to right, black, rgb(black, 0));
+    }
+  }
+  &-column {
+    margin: 20px 5px;
+  }
+  &-separator {
+    width: 2px;
+    height: 400px;
+    // background: red;
+    background-image: radial-gradient(
+      circle,
+      rgb(104, 104, 104),
+      rgb(black, 0)
+    );
+    margin: 0 15px;
+    align-self: center;
+  }
+  &-info {
+    &-bold {
+      font-weight: bold;
+    }
+    &-reg {
+      font-weight: normal;
+    }
+    // &-skill {
+    //   font-size: 2em;
+    // }
+  }
   &-table {
+    max-width: 500px;
     td {
-      border: 1px solid black;
+      border: 0px solid black;
     }
   }
 }
@@ -59,4 +114,72 @@
 }
 #ascension {
   @include flexCenter;
+}
+
+.rarity {
+  width: 40px;
+  height: 40px;
+  // background-color: $bordercolor_gold1;
+  // box-shadow: 0px 0px 10px black;
+  // border: 1px solid black;
+  background-image: radial-gradient(rgb(255, 241, 159), $bordercolor_gold1);
+
+  clip-path: polygon(
+    50% 0%,
+    61% 35%,
+    98% 35%,
+    68% 57%,
+    79% 91%,
+    50% 70%,
+    21% 91%,
+    32% 57%,
+    2% 35%,
+    39% 35%
+  );
+  &-stars {
+    @include flexCenter;
+  }
+}
+.clipshadow {
+  filter: drop-shadow(0px 0px 1px black);
+}
+.stats {
+  font-size: 0.8em;
+  width: 100%;
+  margin: 5px 0;
+}
+
+.class {
+  &-card {
+    width: 50px;
+    height: auto;
+  }
+}
+
+.np {
+  &-face {
+    position: absolute;
+    width: 60px;
+    bottom: 0;
+  }
+  &-card {
+    position: relative;
+    @include flexCenter;
+    width: 100px;
+  }
+  &-bg {
+    // width: 80%;
+    align-self: center;
+  }
+  &-icon {
+    position: absolute;
+    // top: 0;
+    // scale: 200%;
+  }
+}
+
+.skill {
+  &-ico {
+    padding: 2px;
+  }
 }
