--- a/css/main.css
+++ b/css/main.css
@@ -139,6 +139,10 @@ body {
   height: 406px;
 }
 
+.skill-ico {
+  width: 54px;
+}
+
 .servant-card {
   position: relative;
   width: 295px;
@@ -163,10 +167,6 @@ body {
   width: inherit;
   height: inherit;
   z-index: 2;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
 }
 .servant-picture {
   position: absolute;
@@ -174,10 +174,6 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
 }
 .servant-title {
   position: absolute;
@@ -221,10 +217,6 @@ body {
           flex-direction: column;
 }
 .servant-class-ico {
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
   width: 54px;
 }
 .servant-class-name {
@@ -319,6 +311,112 @@ body {
   visibility: hidden;
 }
 
+#servants {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+#servants-portrait {
+  width: 287px;
+  height: 406px;
+}
+
+.skill-ico {
+  width: 54px;
+}
+
+.servant-card {
+  position: relative;
+  width: 295px;
+  height: 503px;
+  background-color: transparent;
+  border: 1px solid black;
+  margin: 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.servant-border {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: inherit;
+  height: inherit;
+  z-index: 2;
+}
+.servant-picture {
+  position: absolute;
+  top: 17px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.servant-title {
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  bottom: 0;
+  z-index: 10;
+  font-family: "Rasa", "Times New Roman", Times, serif;
+  font-stretch: condensed;
+  font-size: 2em;
+  text-align: center;
+  color: white;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+}
+.servant-title-text {
+  position: relative;
+  top: 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.servant-class-ico {
+  width: 54px;
+}
+.servant-class-name {
+  letter-spacing: 2px;
+}
+.servant-click {
+  cursor: pointer;
+}
+
 #modals {
   position: relative;
   padding: 10px;
@@ -379,6 +477,14 @@ body {
       align-content: flex-start;
 }
 
+.modals-notavailable {
+  font-size: 2em;
+  font-weight: bold;
+  text-align: center;
+  font-style: italic;
+  color: red;
+  padding: 10px 0;
+}
 .modals-hide {
   opacity: 0;
   -webkit-transition: opacity 0.5s;
@@ -526,4 +632,7 @@ body {
 
 .skill-ico {
   padding: 2px;
+}
+.skill-ico img {
+  width: 54px;
 }
