--- a/sass/_servant.scss
+++ b/sass/_servant.scss
@@ -8,6 +8,13 @@
     height: 406px;
   }
 }
+.skill {
+  &-ico {
+    width: 54px;
+    // img {
+    // }
+  }
+}
 .servant {
   &-card {
     position: relative;
@@ -28,7 +35,7 @@
     // background-image: url("../images/servant-border/servant_card_00.png");
     // background-size: cover;
     z-index: 2;
-    user-select: none;
+    // user-select: none;
   }
   &-picture {
     position: absolute;
@@ -36,7 +43,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    user-select: none;
+    // user-select: none;
   }
   &-title {
     position: absolute;
@@ -65,7 +72,7 @@
     &-ico {
       // background-image: url("../images/class-ico/archer-ico.png");
       // background-size: 57px 57px;
-      user-select: none;
+      // user-select: none;
       width: 54px;
     }
     &-name {
