--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,1 +1,2 @@
-@import "variables", "reset", "typography", "mixin", "layout", "modals";
+@import "variables", "reset", "typography", "mixin", "layout", "servant",
+  "modals";
