--- a/css/main.css
+++ b/css/main.css
@@ -626,6 +626,13 @@ body {
   height: auto;
 }
 
+.np-NA {
+  position: absolute;
+  font-weight: bold;
+  color: white;
+  text-shadow: 0px 0px 6px black;
+  left: 20px;
+}
 .np-face {
   position: absolute;
   width: 60px;
