--- a/sass/_modals.scss
+++ b/sass/_modals.scss
@@ -187,6 +187,14 @@
 }
 
 .np {
+  &-NA {
+    position: absolute;
+    font-weight: bold;
+    color: white;
+    text-shadow: 0px 0px 6px black;
+    // top: 20px;
+    left: 20px;
+  }
   &-face {
     position: absolute;
     width: 60px;
