--- a/css/main.css
+++ b/css/main.css
@@ -143,6 +143,69 @@ body {
   width: 54px;
 }
 
+@-webkit-keyframes fadeOut {
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
+@keyframes fadeOut {
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+.servant-load {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: black;
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  z-index: 200;
+  opacity: 1;
+  -webkit-transition-timing-function: ease-in-out;
+          transition-timing-function: ease-in-out;
+  -webkit-transition: opacity 1s;
+  transition: opacity 1s;
+}
+.servant-hover {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  z-index: 20;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  -webkit-transition-timing-function: ease-in-out;
+          transition-timing-function: ease-in-out;
+  -webkit-transition: opacity 0.5s;
+  transition: opacity 0.5s;
+}
+.servant-hover:hover {
+  background-color: black;
+  opacity: 0.6;
+}
+.servant-hover p {
+  font-size: 2em;
+  font-weight: bold;
+  color: white;
+  opacity: 1;
+}
 .servant-card {
   position: relative;
   width: 295px;
@@ -315,7 +378,10 @@ body {
 }
 
 .hideMe {
-  visibility: hidden;
+  -webkit-animation: fadeOut 1s;
+          animation: fadeOut 1s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
 }
 
 #servants {
@@ -341,6 +407,62 @@ body {
   width: 54px;
 }
 
+@keyframes fadeOut {
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+.servant-load {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: black;
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  z-index: 200;
+  opacity: 1;
+  -webkit-transition-timing-function: ease-in-out;
+          transition-timing-function: ease-in-out;
+  -webkit-transition: opacity 1s;
+  transition: opacity 1s;
+}
+.servant-hover {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  z-index: 20;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  -webkit-transition-timing-function: ease-in-out;
+          transition-timing-function: ease-in-out;
+  -webkit-transition: opacity 0.5s;
+  transition: opacity 0.5s;
+}
+.servant-hover:hover {
+  background-color: black;
+  opacity: 0.6;
+}
+.servant-hover p {
+  font-size: 2em;
+  font-weight: bold;
+  color: white;
+  opacity: 1;
+}
 .servant-card {
   position: relative;
   width: 295px;
