--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -60,8 +60,8 @@ body {
 }
 
 .hideMe {
-  // display: none;
-  visibility: hidden;
-  // visibility: hidden;
   // opacity: 0;
+  // visibility: hidden;
+  animation: fadeOut 1s;
+  animation-fill-mode: forwards;
 }
