--- a/sass/_servant.scss
+++ b/sass/_servant.scss
@@ -15,7 +15,46 @@
     // }
   }
 }
+
+@keyframes fadeOut {
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
 .servant {
+  &-load {
+    @include flexCenter;
+    background-color: black;
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
+    z-index: 200;
+    opacity: 1;
+    transition-timing-function: ease-in-out;
+    transition: opacity 1s;
+  }
+  &-hover {
+    @include flexCenter;
+    z-index: 20;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition-timing-function: ease-in-out;
+    transition: opacity 0.5s;
+
+    &:hover {
+      // background-color: $bgcolor_blue1;
+      background-color: black;
+      opacity: 0.6;
+    }
+    p {
+      font-size: 2em;
+      font-weight: bold;
+      color: white;
+      opacity: 1;
+    }
+  }
   &-card {
     position: relative;
     width: 295px;
