--- a/sass/_modals.scss
+++ b/sass/_modals.scss
@@ -48,12 +48,15 @@
     padding: 10px 0;
   }
   &-hide {
-    opacity: 0;
-    transition: opacity 0.5s;
-    transition-timing-function: ease;
+    // opacity: 0;
+    // transition: opacity 0.5s;
+    // transition-timing-function: ease;
+    clip-path: polygon(0 50%, 100% 50%, 100% 50%, 0 50%);
   }
   &-show {
-    opacity: 1;
+    // opacity: 1;
+    animation: clipOut 0.5s;
+    animation-fill-mode: forwards;
   }
   &-skill {
     font-size: 1.5em;
@@ -229,3 +232,9 @@
 // #1st-Asc{
 
 // }
+@keyframes clipOut {
+  100% {
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+    // visibility: hidden;
+  }
+}
