--- a/sass/_servant.scss
+++ b/sass/_servant.scss
@@ -39,20 +39,25 @@
     z-index: 20;
     width: 100%;
     height: 100%;
-    opacity: 0;
+    // opacity: 0;
+    background-color: rgb(#000, 0);
     transition-timing-function: ease-in-out;
-    transition: opacity 0.5s;
+    transition: background-color 0.6s;
 
     &:hover {
-      // background-color: $bgcolor_blue1;
-      background-color: black;
-      opacity: 0.6;
+      background-color: $bgcolor_blue1;
+      background-color: rgb(#000, 0.6);
+      p {
+        opacity: 1;
+      }
+      // opacity: 0.6;
     }
     p {
-      font-size: 2em;
+      font-size: 1.5em;
       font-weight: bold;
       color: white;
-      opacity: 1;
+      transition: opacity 0.6s;
+      opacity: 0;
     }
   }
   &-card {
