--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,98 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+body {
+  background-image: url("../images/bg_ptn.gif");
+  background-repeat: repeat;
+}
+
+.button-X {
+  position: absolute;
+  width: 35px;
+  height: 35px;
+  top: -17.5px;
+  right: -17.5px;
+  background-image: radial-gradient(#cecece, #fff);
+  -webkit-box-shadow: 0px 0px 5px black;
+          box-shadow: 0px 0px 5px black;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  cursor: pointer;
+}
+.button-X p {
+  color: #03458f;
+  font-size: 1.5em;
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+.button-fgo {
+  height: 41px;
+  width: 165px;
+  border: none;
+  border-radius: 100px;
+  -webkit-box-shadow: 0px 0px 5px black;
+          box-shadow: 0px 0px 5px black;
+  cursor: pointer;
+  background-image: radial-gradient(#cecece, #fff);
+}
+.button-fgo:active {
+  background: #b5b5b5;
+}
+.button-fgo span {
+  font-size: 24px;
+  font-weight: bold;
+  font-stretch: condensed;
+  background: radial-gradient(50% 50% at 50% 50%, #0071ec 0%, #002b5a 100%);
+  -webkit-background-clip: text;
+          background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+#overlay {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  -webkit-backdrop-filter: blur(2px);
+          backdrop-filter: blur(2px);
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  position: fixed;
+  z-index: 5;
+}
+
+.hideMe {
+  -webkit-animation: fadeOut 0.5s;
+          animation: fadeOut 0.5s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+
+.hideServant {
+  display: none;
+}
+
 #navigation {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -117,7 +209,7 @@ body {
   cursor: pointer;
 }
 .nav-servant-radio {
-  display: none;
+  display: block;
 }
 
 #servants {
@@ -147,6 +239,7 @@ body {
   100% {
     opacity: 0;
     visibility: hidden;
+    display: none;
   }
 }
 
@@ -154,268 +247,7 @@ body {
   100% {
     opacity: 0;
     visibility: hidden;
-  }
-}
-.servant-load {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  background-color: black;
-  position: fixed;
-  height: 100vh;
-  width: 100vw;
-  z-index: 200;
-  opacity: 1;
-  -webkit-transition-timing-function: ease-in-out;
-          transition-timing-function: ease-in-out;
-  -webkit-transition: opacity 1s;
-  transition: opacity 1s;
-}
-.servant-hover {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  z-index: 20;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0);
-  -webkit-transition-timing-function: ease-in-out;
-          transition-timing-function: ease-in-out;
-  -webkit-transition: background-color 0.6s;
-  transition: background-color 0.6s;
-}
-.servant-hover:hover {
-  background-color: #03458f;
-  background-color: rgba(0, 0, 0, 0.6);
-}
-.servant-hover:hover p {
-  opacity: 1;
-}
-.servant-hover p {
-  font-size: 1.5em;
-  font-weight: bold;
-  color: white;
-  -webkit-transition: opacity 0.6s;
-  transition: opacity 0.6s;
-  opacity: 0;
-}
-.servant-card {
-  position: relative;
-  width: 295px;
-  height: 503px;
-  background-color: transparent;
-  border: 1px solid black;
-  margin: 5px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-.servant-border {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: inherit;
-  height: inherit;
-  z-index: 1;
-}
-.servant-picture {
-  position: absolute;
-  top: 17px;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-.servant-title {
-  position: absolute;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  bottom: 10px;
-  z-index: 2;
-  font-family: "Rasa", "Times New Roman", Times, serif;
-  font-stretch: condensed;
-  font-size: 2em;
-  text-align: center;
-  color: white;
-  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
-}
-.servant-title-text {
-  position: relative;
-  top: 5px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-.servant-class-ico {
-  width: 54px;
-  height: 54px;
-  position: relative;
-}
-.servant-class-ico img {
-  top: 0px;
-  left: 2px;
-  position: absolute;
-}
-.servant-class-name {
-  letter-spacing: 2px;
-}
-.servant-click {
-  cursor: pointer;
-}
-
-body {
-  background-image: url("../images/bg_ptn.gif");
-  background-repeat: repeat;
-}
-
-.button-X {
-  position: absolute;
-  width: 35px;
-  height: 35px;
-  top: -17.5px;
-  right: -17.5px;
-  background-image: radial-gradient(#cecece, #fff);
-  -webkit-box-shadow: 0px 0px 5px black;
-          box-shadow: 0px 0px 5px black;
-  -webkit-transform: rotate(45deg);
-          transform: rotate(45deg);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  cursor: pointer;
-}
-.button-X p {
-  color: #03458f;
-  font-size: 1.5em;
-  -webkit-transform: rotate(-45deg);
-          transform: rotate(-45deg);
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-}
-.button-fgo {
-  height: 41px;
-  width: 165px;
-  border: none;
-  border-radius: 100px;
-  -webkit-box-shadow: 0px 0px 5px black;
-          box-shadow: 0px 0px 5px black;
-  cursor: pointer;
-  background-image: radial-gradient(#cecece, #fff);
-}
-.button-fgo:active {
-  background: #b5b5b5;
-}
-.button-fgo span {
-  font-size: 24px;
-  font-weight: bold;
-  font-stretch: condensed;
-  background: radial-gradient(50% 50% at 50% 50%, #0071ec 0%, #002b5a 100%);
-  -webkit-background-clip: text;
-          background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
-#overlay {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  background-color: rgba(0, 0, 0, 0.5);
-  -webkit-backdrop-filter: blur(2px);
-          backdrop-filter: blur(2px);
-  width: 100vw;
-  height: 100vh;
-  top: 0;
-  left: 0;
-  position: fixed;
-  z-index: 5;
-}
-
-.hideMe {
-  -webkit-animation: fadeOut 0.5s;
-          animation: fadeOut 0.5s;
-  -webkit-animation-fill-mode: forwards;
-          animation-fill-mode: forwards;
-}
-
-#servants {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
-#servants-portrait {
-  width: 287px;
-  height: 406px;
-}
-
-.skill-ico {
-  width: 54px;
-}
-
-@keyframes fadeOut {
-  100% {
-    opacity: 0;
-    visibility: hidden;
+    display: none;
   }
 }
 .servant-load {
