--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,2 +1,2 @@
-@import "variables", "reset", "typography", "mixin", "layout", "servant",
+@import "variables", "reset", "typography", "mixin", "layout", "nav", "servant",
   "modals";
