--- a/css/main.css
+++ b/css/main.css
@@ -31,10 +31,11 @@ body {
 
 .button-X {
   position: absolute;
+  z-index: 200;
   width: 35px;
   height: 35px;
-  top: -17.5px;
-  right: -17.5px;
+  top: -5px;
+  right: -5px;
   background-image: radial-gradient(#cecece, #fff);
   -webkit-box-shadow: 0px 0px 5px black;
           box-shadow: 0px 0px 5px black;
@@ -106,8 +107,8 @@ body {
 }
 
 .hideMe {
-  -webkit-animation: fadeOut 0.5s;
-          animation: fadeOut 0.5s;
+  -webkit-animation: fadeOut 0.1s;
+          animation: fadeOut 0.1s;
   -webkit-animation-fill-mode: forwards;
           animation-fill-mode: forwards;
 }
@@ -289,6 +290,7 @@ body {
           transition-timing-function: ease-in-out;
   -webkit-transition: background-color 0.6s;
   transition: background-color 0.6s;
+  cursor: pointer;
 }
 .servant-hover:hover {
   background-color: #03458f;
@@ -460,6 +462,9 @@ body {
       align-content: flex-start;
 }
 
+.modals-wrapper-2 {
+  position: relative;
+}
 .modals-notavailable {
   font-size: 2em;
   font-weight: bold;
