--- a/sass/_servant.scss
+++ b/sass/_servant.scss
@@ -44,6 +44,7 @@
     background-color: rgb(#000, 0);
     transition-timing-function: ease-in-out;
     transition: background-color 0.6s;
+    cursor: pointer;
 
     &:hover {
       background-color: $bgcolor_blue1;
