--- a/css/main.css
+++ b/css/main.css
@@ -208,9 +208,18 @@ body {
 
 .nav-servant-ico {
   cursor: pointer;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-tap-highlight-color: transparent;
 }
 .nav-servant-radio {
   display: none;
+}
+
+label input[type=radio]:checked + .nav-servant-ico {
+  -webkit-filter: brightness(1.3);
+          filter: brightness(1.3);
+  -webkit-filter: drop-shadow(0px 0px 10px #ffc700);
+          filter: drop-shadow(0px 0px 10px #ffc700);
 }
 
 #servants {
