--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -71,9 +71,15 @@
   &-servant {
     &-ico {
       cursor: pointer;
+      -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+      -webkit-tap-highlight-color: transparent;
     }
     &-radio {
       display: none;
     }
   }
+}
+label input[type="radio"]:checked + .nav-servant-ico {
+  filter: brightness(1.3);
+  filter: drop-shadow(0px 0px 10px $bordercolor_gold1);
 }
