--- a/css/main.css
+++ b/css/main.css
@@ -107,14 +107,26 @@ body {
 }
 
 .hideMe {
-  -webkit-animation: fadeOut 0.1s;
-          animation: fadeOut 0.1s;
+  -webkit-animation: fadeOut 1s;
+          animation: fadeOut 1s;
   -webkit-animation-fill-mode: forwards;
           animation-fill-mode: forwards;
 }
 
 .hideServant {
+  -webkit-animation: fadeOut 1s;
+          animation: fadeOut 1s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
   display: none;
+}
+
+.showServant {
+  -webkit-animation: fadeIn 0.5s;
+          animation: fadeIn 0.5s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+  display: block;
 }
 
 #navigation {
@@ -249,7 +261,6 @@ label input[type=radio]:checked + .nav-servant-ico {
   100% {
     opacity: 0;
     visibility: hidden;
-    display: none;
   }
 }
 
@@ -257,8 +268,22 @@ label input[type=radio]:checked + .nav-servant-ico {
   100% {
     opacity: 0;
     visibility: hidden;
-    display: none;
   }
+}
+@-webkit-keyframes fadeIn {
+  100% {
+    opacity: 1;
+    visibility: visible;
+  }
+}
+@keyframes fadeIn {
+  100% {
+    opacity: 1;
+    visibility: visible;
+  }
+}
+.servant-wrapper {
+  opacity: 0;
 }
 .servant-load {
   display: -webkit-box;
