--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -82,4 +82,5 @@
 label input[type="radio"]:checked + .nav-servant-ico {
   filter: brightness(1.3);
   filter: drop-shadow(0px 0px 10px $bordercolor_gold1);
+  // zoom: 1.1;
 }
