--- a/css/main.css
+++ b/css/main.css
@@ -148,7 +148,8 @@ body {
   background: url("../images/bg_ptn.gif"), radial-gradient(106.89% 608.72% at 50% 50%, #03458f 0%, #0dc8ff 100%);
   background-blend-mode: multiply, normal;
   width: 100vw;
-  height: 270px;
+  height: auto;
+  padding: 20px 0;
   border: solid 5px;
   border-image-slice: 1;
   border-image-source: linear-gradient(to bottom, #ffc700, #705700, #cc9f00);
@@ -190,6 +191,7 @@ body {
   -webkit-column-gap: 12px;
      -moz-column-gap: 12px;
           column-gap: 12px;
+  padding: 5px 0;
 }
 #nav-menu-2 {
   display: -webkit-box;
@@ -201,21 +203,15 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  padding: 5px 0;
 }
 
 #search {
-  display: grid;
-  grid-template-columns: repeat(3, auto);
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-column-gap: 10px;
-     -moz-column-gap: 10px;
-          column-gap: 10px;
+  margin-right: 12px;
 }
 #search-bar {
   height: 55px;
-  width: 339px;
+  width: 100%;
   left: 427px;
   top: 181px;
   outline-width: 0;
@@ -686,5 +682,66 @@ label input[type=radio]:checked + .nav-servant-ico {
   100% {
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
             clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+  }
+}
+@media (max-width: 1281px) {
+  #nav-menu-1 {
+    grid-template-columns: repeat(7, auto);
+    row-gap: 20px;
+  }
+}
+@media (max-width: 600px) {
+  #nav-container {
+    padding: 0 5px;
+  }
+  #nav-menu-1 {
+    position: fixed;
+    z-index: 10;
+    height: 100vh;
+    padding: 10px 20px;
+    top: 0;
+    left: 0;
+    background: url("../images/bg_ptn.gif"), radial-gradient(106.89% 608.72% at 50% 50%, rgba(0, 0, 0, 0.2) 0%, rgba(255, 255, 255, 0));
+    background-blend-mode: multiply, normal;
+    border: solid 5px;
+    border-image-slice: 1;
+    border-image-source: linear-gradient(to bottom, #ffc700, #705700, #cc9f00);
+    grid-template-columns: repeat(2, 70px);
+    grid-template-rows: repeat(7, 90px);
+    row-gap: 1px;
+    -webkit-column-gap: 10px;
+       -moz-column-gap: 10px;
+            column-gap: 10px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  #nav-menu-1::after {
+    content: "Select Class";
+    position: absolute;
+    top: 40px;
+    right: 0;
+    padding: 5px;
+    height: 20px;
+    background: white;
+    -webkit-box-shadow: inset 0px -10px 10px rgba(0, 0, 0, 0.5);
+            box-shadow: inset 0px -10px 10px rgba(0, 0, 0, 0.5);
+    -webkit-transform: rotate(270deg);
+            transform: rotate(270deg);
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    font-weight: bold;
+    color: #03458f;
+  }
+  #nav-menu-2 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    grid-template-columns: auto auto;
+  }
+  #nav-menu-2 img {
+    min-width: 50px;
   }
 }
