--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -1,1 +1,92 @@
 // Nav=================
+
+@media (max-width: 1281px) {
+  #nav {
+    &-menu {
+      &-1 {
+        grid-template-columns: repeat(7, auto);
+        row-gap: 20px;
+      }
+      // &-2 {
+      //   @include gridCenterCol(2, 1fr);
+      //   column-gap: 12px;
+      // }
+    }
+  }
+  //   #search {
+  //     margin: 0;
+  //   }
+}
+
+@media (max-width: 600px) {
+  #nav {
+    &-container {
+      padding: 0 5px;
+    }
+    &-menu {
+      &-1 {
+        position: fixed;
+        z-index: 10;
+        // width: 100%;
+        height: 100vh;
+        padding: 10px 20px;
+        top: 0;
+        left: 0;
+        // background: red;
+        // Background
+        background: url($bgpattern),
+          radial-gradient(
+            106.89% 608.72% at 50% 50%,
+            rgb(black, 0.2) 0%,
+            rgb(white, 0)
+          );
+        background-blend-mode: multiply, normal;
+        // Border
+        border: solid 5px;
+        border-image-slice: 1;
+        border-image-source: linear-gradient(
+          to bottom,
+          #ffc700,
+          #705700,
+          #cc9f00
+        );
+        // Grid
+        grid-template-columns: repeat(2, 70px);
+        grid-template-rows: repeat(7, 90px);
+        row-gap: 1px;
+        column-gap: 10px;
+        justify-content: center;
+        &::after {
+          content: "Select Class";
+          //   position: fixed;
+          //   display: flex;
+          position: absolute;
+          top: 40px;
+          right: 0;
+          padding: 5px;
+          height: 20px;
+          //   background: $bgcolor_blue2;
+          //   box-shadow: inset 0px -10px 10px $bgcolor_blue1;
+
+          background: white;
+          box-shadow: inset 0px -10px 10px rgb(#000, 0.5);
+          transform: rotate(270deg);
+
+          border-bottom-left-radius: 10px;
+          border-bottom-right-radius: 10px;
+          font-weight: bold;
+          //   color: white;
+          color: $bgcolor_blue1;
+        }
+      }
+      &-2 {
+        @include gridCenterCol(2, 1fr);
+        // grid-template-rows: 50px;
+        grid-template-columns: auto auto;
+        img {
+          min-width: 50px;
+        }
+      }
+    }
+  }
+}
