--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -9,7 +9,9 @@
     );
   background-blend-mode: multiply, normal;
   width: 100vw;
-  height: 270px;
+  // height: 270px;
+  height: auto;
+  padding: 20px 0;
   //   Border with gradient color
   border: solid 5px;
   border-image-slice: 1;
@@ -44,20 +46,22 @@
     &-1 {
       @include gridCenterCol(14, auto);
       column-gap: 12px;
+      padding: 5px 0;
     }
     &-2 {
       @include flexCenter;
+      padding: 5px 0;
     }
   }
 }
 
 #search {
-  @include gridCenterCol(3, auto);
-  column-gap: 10px;
-
+  // @include gridCenterCol(2, auto);
+  // column-gap: 10px;
+  margin-right: 12px;
   &-bar {
     height: 55px;
-    width: 339px;
+    width: 100%;
     left: 427px;
     top: 181px;
     // Remove outline when selected Input text
