--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -20,6 +20,23 @@
 
 @media (max-width: 600px) {
   #nav {
+    &-burger {
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      padding: 5px 10px;
+      z-index: 10;
+      // Box
+      background: white;
+      box-shadow: inset 0px -10px 10px rgb(#000, 0.5);
+      border-top-right-radius: 10px;
+      border-bottom-right-radius: 10px;
+      // Text
+      font-size: 2em;
+      font-weight: 900;
+      color: $bgcolor_blue1;
+    }
     &-container {
       padding: 0 5px;
     }
@@ -27,13 +44,11 @@
       &-1 {
         position: fixed;
         z-index: 10;
-        // width: 100%;
         height: 100vh;
         padding: 10px 20px;
         top: 0;
-        left: 0;
-        // background: red;
-        // Background
+        // left: 0;
+        left: -200px;
         background: url($bgpattern),
           radial-gradient(
             106.89% 608.72% at 50% 50%,
@@ -56,28 +71,24 @@
         row-gap: 1px;
         column-gap: 10px;
         justify-content: center;
-        &::after {
-          content: "Select Class";
-          //   position: fixed;
-          //   display: flex;
-          position: absolute;
-          top: 40px;
-          right: 0;
-          padding: 5px;
-          height: 20px;
-          //   background: $bgcolor_blue2;
-          //   box-shadow: inset 0px -10px 10px $bgcolor_blue1;
-
-          background: white;
-          box-shadow: inset 0px -10px 10px rgb(#000, 0.5);
-          transform: rotate(270deg);
-
-          border-bottom-left-radius: 10px;
-          border-bottom-right-radius: 10px;
-          font-weight: bold;
-          //   color: white;
-          color: $bgcolor_blue1;
-        }
+        // &::after {
+        //   content: "▼";
+        //   display: flex;
+        //   align-items: flex-end;
+        //   position: absolute;
+        //   top: 40px;
+        //   right: -51px;
+        //   margin: 0;
+        //   padding: 10px 20px;
+        //   z-index: -1;
+        //   background: white;
+        //   box-shadow: inset 0px -10px 10px rgb(#000, 0.5);
+        //   transform: rotate(270deg);
+        //   border-bottom-left-radius: 10px;
+        //   border-bottom-right-radius: 10px;
+        //   font-weight: bold;
+        //   color: $bgcolor_blue1;
+        // }
       }
       &-2 {
         @include gridCenterCol(2, 1fr);
