--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -1,27 +1,88 @@
 // Nav=================
 
 @media (max-width: 1281px) {
+  // #servants {
+  //   transform: scale(0.5);
+  // }
+  .servant {
+    // &-wrapper {
+    //   //   width: 500px;
+    //   // transform: scale(0.5);
+    //   // transform-origin: left top;
+    // }
+    &-card {
+      width: 150px;
+      height: 255px;
+      // transform: scale(0.5);
+    }
+    &-title {
+      // transform: scale(0.5);
+      font-size: 1em;
+    }
+    &-class {
+      &-ico {
+        width: 27px;
+        height: 27px;
+        img {
+          top: 4.6px;
+          left: 0.4px;
+        }
+      }
+    }
+  }
   #nav {
     &-menu {
       &-1 {
         grid-template-columns: repeat(7, auto);
-        row-gap: 20px;
+        row-gap: 5px;
       }
-      // &-2 {
-      //   @include gridCenterCol(2, 1fr);
-      //   column-gap: 12px;
-      // }
     }
   }
-  //   #search {
-  //     margin: 0;
-  //   }
+}
+
+@media (max-width: 1025px) {
+  /* big landscape tablets, laptops, and desktops */
+  #modals {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    height: 80vh;
+    width: 90vw;
+    overflow-x: scroll;
+    &-ascension {
+      @include flexCenter;
+    }
+    &-info {
+      &-wrapper {
+        flex-direction: column;
+      }
+    }
+  }
+  .modals {
+    &-table {
+      @include flexCenter;
+    }
+    &-wrapper {
+      &-2 {
+        // @include flexCenter;
+        // flex-direction: column;
+        // margin: 0 5px;
+        height: 80vh;
+        width: 90vw;
+        // overflow-y: scroll;
+      }
+    }
+    &-separator {
+      display: none;
+    }
+  }
 }
 
 @media (max-width: 600px) {
   #nav {
     &-title {
-      font-size: 2em;
+      // font-size: 2em;
+      display: none;
     }
     // &-burger {
     //   display: block;
