--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -24,10 +24,12 @@
   }
   &-container {
     position: relative;
+    @include flexCenter;
+    flex-direction: column;
   }
   &-title {
     @include flexCenter;
-    font-size: 3.5em;
+    font-size: 2.5em;
     @include fgoFont;
     text-align: center;
 
@@ -35,7 +37,7 @@
     &::after {
       text-shadow: 0px 0px 5px black;
       color: transparent;
-      content: "FGO Servant Directory";
+      content: "Select a Class";
     }
 
     span {
@@ -79,11 +81,15 @@
 }
 
 .nav {
+  &-logo {
+    width: 200px;
+  }
   &-servant {
     &-ico {
       cursor: pointer;
       -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
       -webkit-tap-highlight-color: transparent;
+      width: 60px;
     }
     &-radio {
       display: none;
