--- a/sass/_reset.scss
+++ b/sass/_reset.scss
@@ -9,8 +9,7 @@ html {
   scroll-behavior: smooth;
 }
 // body {
-//   background-color: $sectionColor;
-//   // overflow: hidden;
+//   position: relative;
 // }
 li {
   list-style: none;
