added hxw to pic

--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -51,8 +51,8 @@
     overflow-y: scroll;
     &-ascension {
       @include flexCenter;
-      height: 502px;
-      width: 300px;
+      // height: 502px;
+      // width: 300px;
     }
     &-info {
       &-wrapper {
