--- a/sass/_modals.scss
+++ b/sass/_modals.scss
@@ -20,6 +20,8 @@
   &-ascension {
     @include flexCenter;
     flex-direction: column;
+    height: 502px;
+    width: 300px;
     img {
       width: 300px;
       height: auto;
