--- a/css/main.css
+++ b/css/main.css
@@ -136,6 +136,24 @@ body {
   display: none;
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #ebebeb;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  -webkit-box-shadow: inset 0 0 5px black;
+          box-shadow: inset 0 0 5px black;
+  border-radius: 10px;
+  background-image: radial-gradient(#cecece, #fff);
+}
+
 #navigation {
   display: -webkit-box;
   display: -ms-flexbox;
